Edited: Jobs pages

--- a/src/views/job-apply.jade
+++ b/src/views/job-apply.jade
@@ -4,8 +4,8 @@ block content
   section.section-description
     .container.bg-white
       .description
-        p.font-weight-light.mb-2 You are applying for the post of
-        h2.font-weight-light.mb-5 Software Engineer
+        p.mb-2 You are applying for the post of
+        h2 Software Engineer
         form.form-apply
           .form-row
             .form-group.col-md-6
@@ -59,7 +59,7 @@ block content
                 input#customFile.custom-file-input(type="file")
                 label.custom-file-label(for="customFile")
           .form-row
-            .form-group.col-md-6
-              .captca.text-center Captca 
-        .btn-wrap.text-center
-            a.btn.btn-gray(href="job-apply.html") Submit
+            .form-group.col-md-6.mb-0
+              .captcha.text-center Captcha
+          .btn-wrap
+            button.btn.btn-gray(type='submit') Submit
