--- a/src/views/job-description.jade
+++ b/src/views/job-description.jade
@@ -4,23 +4,24 @@ block content
   section.section-description
     .container.bg-white
       .description
-        h2.font-weight-light Software Engineer
-        p.font-weight-light Experience : 3+ years in ROR
+        h2 Software Engineer
+        p Experience : 3+ years in ROR
         p.text-left.font-weight-normal Description
-        ul.list-description.list-unstyled.font-weight-light
-          li.mb-3 Should have worked with latest versions of ruby and rails
-          li.mb-3 Good knowledge of working with atleast one of MySQL, PostgreSQL
-          li.mb-3 Knowledge of mongodb will be added advantage
-          li.mb-3 Good knowledge of working with at least one of angular.js, node.js or react.js
-          li.mb-3 Good knowledge of writing test cases using rspec
-          li.mb-3 Good knowledge of JavaScript and JQuery
-          li.mb-3 Knowledge of writing est cases for views and JavaScript will be added advantage
-          li.mb-3 Good knowledge of deployment using mina or capistrano
-          li.mb-3 Good knowledge of Github
-          li.mb-3 
-            p Added advantage - worked in team and experience of handling team few members Should have good communication skills 
+        ul.list-unstyled.list-description
+          li Should have worked with latest versions of ruby and rails
+          li Good knowledge of working with atleast one of MySQL, PostgreSQL
+          li Knowledge of mongodb will be added advantage
+          li Good knowledge of working with at least one of angular.js, node.js or react.js
+          li Good knowledge of writing test cases using rspec
+          li Good knowledge of JavaScript and JQuery
+          li Knowledge of writing est cases for views and JavaScript will be added advantage
+          li Good knowledge of deployment using mina or capistrano
+          li Good knowledge of Github
+          li 
+            p Added advantage - worked in team and experience of handling team of few members 
+            p Should have good communication skills 
             p Experience of client communication and directly working with client
-          li.mb-3 
+          li 
             p Added advantage
             p Active in open source community
             p Presented paper at Ruby conf in India or abroad
