--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -1,70 +1,112 @@
 .section-description{
-  background-color: #F4F4F4;
+  background-color: $gray-96;
 
   &.bg-white{
     background-color: $white;
   }
 }
+
 .description{
-  @include flex(0 0 80%);
-  max-width: 80%;
+  width: 80%;
   margin: 0 auto;
   padding: rem(100px 0 80px);
   color: $gray-20;
+
+  @include media-breakpoint-down(md) {
+    width: 100%;
+    padding: rem(100px 16px 80px);
+  }
+
   @include media-breakpoint-down(sm) {
     padding: rem(40px 0);
-    max-width: 100%
   }
+
   h2{
+    font-weight: 300;
     line-height: rem(39px);
     letter-spacing: rem(1px);
     margin-bottom:rem(10px);
+
     @include media-breakpoint-down(sm){
       text-align: center;
       font-size: rem(24px);
       line-height: rem(29px);
     }
   }
-  p{
+
+  p {
     line-height: rem(19px);
     letter-spacing: rem(1px);
-    margin-bottom:rem(40px);
+    margin:0;
+    font-weight: 300;
+  }
+
+  > p {
+    margin: 0 0 rem(40px);
+
     @include media-breakpoint-down(sm){
       text-align: center;
     }
   }
-  .list-description{
-    padding: 0;
-    margin-bottom:rem(80px);
-    font-size: rem(16px);
-    line-height: rem(20px);
-    @include media-breakpoint-down(sm){
-      margin-bottom:rem(40px);
-    }
-  }
 }
+
 .list-description{
-  p{
+  padding: 0;
+  margin-bottom:rem(80px);
+  line-height: rem(19px);
+
+  @include media-breakpoint-down(sm){
+    margin-bottom:rem(40px);
+  }
+
+  li{
+    margin: 0 0 rem(16px);
     font-weight: 300;
-    line-height: rem(20px);
-    margin-bottom: 0;
-    @include media-breakpoint-down(sm){
-      text-align: left;
+
+    &:last-child {
+      margin: 0;
+    }
+
+    p{
+
+      @include media-breakpoint-down(sm) {
+        margin: 0 0 rem(16px);
+
+        &:last-child {
+          margin: 0;
+        }
+      }
     }
   }
 }
+
 .form-apply{
-  margin-bottom: 40px;
+  width: 80%;
+  padding: rem(54px) 0 0;
+
+  @include media-breakpoint-down(md) {
+    width: 100%;
+  }
 
   label{
-    font-size: rem()14px;
+    font-size: rem(14px);
     font-weight: 300;
     line-height: rem(17px);
   }
-  .captca{
+
+  .captcha{
     height: rem(92px);
     border: 1px solid #D1CBCB;
     border-radius: rem(4px);
     padding: rem(30px);
+  }
+
+  .btn-wrap {
+    padding: rem(80px) 0 0;
+    text-align: center;
+
+    @include media-breakpoint-down(sm) {
+      padding: rem(40px) 0 0;
+    }
   }
 }
