--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -12,13 +12,13 @@ block content
           p.font-weight-bold Ruby Expert
           p.font-weight-thin Number of posts - 2
           .btn-wrap
-            a.btn.btn-outline-white(href="javascript:void(0);") View Details
+            a.btn.btn-outline-white(href="job-description.html") View Details
         .jobs
           h4.title Android Developer
           p.font-weight-bold GO Expert
           p.font-weight-thin Number of posts - 2
           .btn-wrap
-            a.btn.btn-outline-white(href="javascript:void(0);") View Details
+            a.btn.btn-outline-white(href="job-description.html") View Details
       .testimonials-wrap
         h2.wrap-title Employee Testimonials
         .card-wrap.-striped
