Added: open source page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,5 +48,6 @@
 @import "pages/team";
 @import "pages/career";
 @import "pages/jobs";
+@import "pages/open_source";
 /* offcanvas */
 @import "offcanvas";
