--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -19,7 +19,7 @@ header.josh-header.fixed-top
             a.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Company
             .dropdown-menu(aria-labelledby='dropdownMenuLink')
               a.dropdown-item(href='javascript:void(0);') About Us
-              a.dropdown-item(href='javascript:void(0);') Open Source
+              a.dropdown-item(href='open-source.html') Open Source
               a.dropdown-item(href='javascript:void(0);') News
               a.dropdown-item(href='team.html') Our Team
               a.dropdown-item(href='career.html') Career
