--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -278,5 +278,5 @@ block content
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top                               
         .btn-wrap
-            a.btn.btn-gray(href="javascript:void(0);") Services
-            a.btn.btn-outline-gray(href="javascript:void(0);") Industries
+            a.btn.btn-gray(href="technologies.html") Technologies
+            a.btn.btn-outline-gray(href="industries.html") Industries
