--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -94,5 +94,5 @@ block content
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
       .btn-wrap
-        a.btn.btn-gray(href="javascript:void(0);") Services
-        a.btn.btn-outline-gray(href="javascript:void(0);") Industries
+        a.btn.btn-gray(href="services.html") Services
+        a.btn.btn-outline-gray(href="industries.html") Industries
