Edited: main scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,5 +49,6 @@
 @import "pages/career";
 @import "pages/jobs";
 @import "pages/innovation";
+@import "pages/open_source";
 /* offcanvas */
 @import "offcanvas";
