Added:AboutUs Page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,5 +50,7 @@
 @import "pages/jobs";
 @import "pages/innovation";
 @import "pages/open_source";
+@import "pages/about-us";
+@import "pages/contact-us";
 /* offcanvas */
 @import "offcanvas";
