--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -54,6 +54,7 @@ $bunting: #283047;
 $galliano: #CAAE0D;
 $fountain-blue: #62AAAC;
 $roman: #D1645D;
+$tea-green: #CCEBB7;
 
 //$colors: () !default;
 //$colors: map-merge((
