--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -24,6 +24,6 @@ header.josh-header.fixed-top
               a.dropdown-item(href='team.html') Our Team
               a.dropdown-item(href='career.html') Career
               a.dropdown-item(href='javascript:void(0);') Contact Us
-              a.dropdown-item(href='javascript:void(0);') Blog
+              a.dropdown-item(href='https://blog.joshsoftware.com/', target="_blank") Blog
           a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Contact Us
-          a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Blog
+          a.nav-item.nav-link.nav-offcanvas-link(href='https://blog.joshsoftware.com/', target="_blank") Blog
