--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -9,5 +9,5 @@ block content
       p.title So, what’s in it for JOSH?
       p.info NOTHING. We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
       .btn-wrap
-        a.btn.btn-gray(href="javascript:void(0);") Open Source
-        a.btn.btn-outline-gray(href="javascript:void(0);") Services
+        a.btn.btn-gray(href="open-source.html") Open Source
+        a.btn.btn-outline-gray(href="services.html") Services
