--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -8,8 +8,55 @@ block content
       h2.section-heading Driving Open Source
       p.txt-info We take pride in working with our community on various events, platforms and collaborations. True to our name, we are passionate about helping the progress of technology disruption in all forms.
       .row
-        .col-sm-4
+        .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
             h5.card-title Rubyconf India 2018
             p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+        .col-lg-4.col-md-6.d-flex
+          .card.card-note
+           .card-body
+            h5.card-title Rails Girls Pune 2018
+            p.card-text During the one-day workshop for women, we’ll dive into the magical world of Ruby on Rails. The event is aimed at encouraging more women to choose a career in tech, by exposing them to a full stack web development framework like Ruby on Rails.
+        .col-lg-4.col-md-6.d-flex
+          .card.card-note
+           .card-body
+            h5.card-title Gophercon India 2018
+            p.card-text Go is an open source project developed by a team at Google and many contributors from the open source community.
+        .col-lg-4.col-md-6.d-flex
+          .card.card-note
+           .card-body
+            h5.card-title Donation Management Software 
+            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+        .col-lg-4.col-md-6.d-flex
+          .card.card-note
+           .card-body
+            h5.card-title SPlat - SMS Platform
+            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+        .col-lg-4.col-md-6.d-flex
+          .card.card-note
+           .card-body
+            h5.card-title Ruby Meetup
+            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+      .media-wrap
+        h2.media-heading Activities
+        ul.list-unstyled.list-media
+          li.list-media-item
+            .card.card-media
+              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+              a.btn-link(href="https://youtu.be/OtfyLtsrmCA", target="_blank") https://youtu.be/OtfyLtsrmCA
+          li.list-media-item
+            .card.card-media
+              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+              a.btn-link(href="https://youtu.be/8nU08YDOb58", target="_blank") https://youtu.be/8nU08YDOb58
+          li.list-media-item
+            .card.card-media
+              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+              a.btn-link(href="https://youtu.be/N98cnuW0bm0", target="_blank") https://youtu.be/N98cnuW0bm0
+          li.list-media-item
+            .card.card-media
+              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+              a.btn-link(href="https://youtu.be/e_7qhUMJJ8k", target="_blank") https://youtu.be/e_7qhUMJJ8k
+      .btn-wrap
+        a.btn.btn-gray(href="team.html") Our Team
+        a.btn.btn-outline-gray(href="career.html") Career
