--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -14,6 +14,26 @@ block content
             a.btn.btn-white(href="services.html") Meet Our Team
             a.btn.btn-outline-white(href="technologies.html") Job Openings
         img(src="https://dummyimage.com/616x798/ffffff/000000&text=placeholder" alt="About Logo")
-  section.section-news.section-content
+  section#news.section-content
     .container
-      h2 Josh In News
+      .media-wrap
+          h2.media-heading Josh in News
+          ul.list-unstyled.list-media
+            li.list-media-item
+              .card.card-media
+                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+                a.btn-link(href="https://youtu.be/OtfyLtsrmCA", target="_blank") https://youtu.be/OtfyLtsrmCA
+            li.list-media-item
+              .card.card-media
+                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+                a.btn-link(href="https://youtu.be/8nU08YDOb58", target="_blank") https://youtu.be/8nU08YDOb58
+            li.list-media-item
+              .card.card-media
+                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+                a.btn-link(href="https://youtu.be/N98cnuW0bm0", target="_blank") https://youtu.be/N98cnuW0bm0
+            li.list-media-item
+              .card.card-media
+                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
+                a.btn-link(href="https://youtu.be/e_7qhUMJJ8k", target="_blank") https://youtu.be/e_7qhUMJJ8k
+      .btn-wrap
+        a.btn.btn-outline-gray(href="contact-us.html") Contact Us
