--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -78,5 +78,5 @@ block content
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
       .btn-wrap
-        a.btn.btn-gray(href="javascript:void(0);") About Us
+        a.btn.btn-gray(href="about-us.html") About Us
         a.btn.btn-outline-gray(href="javascript:void(0);") Contact Us
