--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -18,12 +18,12 @@ header.josh-header.fixed-top
           .dropdown
             a.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Company
             .dropdown-menu(aria-labelledby='dropdownMenuLink')
-              a.dropdown-item(href='javascript:void(0);') About Us
+              a.dropdown-item(href='about-us.html') About Us
               a.dropdown-item(href='open-source.html') Open Source
-              a.dropdown-item(href='javascript:void(0);') News
+              a.dropdown-item(href='about-us.html#news') News
               a.dropdown-item(href='team.html') Our Team
               a.dropdown-item(href='career.html') Career
-              a.dropdown-item(href='javascript:void(0);') Contact Us
+              a.dropdown-item(href='contact-us.html') Contact Us
               a.dropdown-item(href='https://blog.joshsoftware.com/', target="_blank") Blog
-          a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Contact Us
+          a.nav-item.nav-link.nav-offcanvas-link(href='contact-us.html') Contact Us
           a.nav-item.nav-link.nav-offcanvas-link(href='https://blog.joshsoftware.com/', target="_blank") Blog
