--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -44,19 +44,23 @@ block content
           li.list-media-item
             .card.card-media
               img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              a.btn-link(href="https://youtu.be/OtfyLtsrmCA", target="_blank") https://youtu.be/OtfyLtsrmCA
+              .btn-wrap
+                a.btn-link(href="https://youtu.be/OtfyLtsrmCA", target="_blank") https://youtu.be/OtfyLtsrmCA
           li.list-media-item
             .card.card-media
               img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              a.btn-link(href="https://youtu.be/8nU08YDOb58", target="_blank") https://youtu.be/8nU08YDOb58
+              .btn-wrap
+                a.btn-link(href="https://youtu.be/8nU08YDOb58", target="_blank") https://youtu.be/8nU08YDOb58
           li.list-media-item
             .card.card-media
               img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              a.btn-link(href="https://youtu.be/N98cnuW0bm0", target="_blank") https://youtu.be/N98cnuW0bm0
+              .btn-wrap
+                a.btn-link(href="https://youtu.be/N98cnuW0bm0", target="_blank") https://youtu.be/N98cnuW0bm0
           li.list-media-item
             .card.card-media
               img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              a.btn-link(href="https://youtu.be/e_7qhUMJJ8k", target="_blank") https://youtu.be/e_7qhUMJJ8k
+              .btn-wrap
+                a.btn-link(href="https://youtu.be/e_7qhUMJJ8k", target="_blank") https://youtu.be/e_7qhUMJJ8k
       .btn-wrap
         a.btn.btn-gray(href="team.html") Our Team
         a.btn.btn-outline-gray(href="career.html") Career
