--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -1,33 +1,67 @@
 .section-innovation{
-  text-align: center;
-  h1{
+
+    &.section-content {
+      padding: rem(60px 0 80px);
+
+      @include media-breakpoint-down(sm) {
+        padding: rem(30px 0 0);
+      }
+    }
+  
+  .section-heading{
     font-size: rem(60px);
-    font-weight: 100;
     line-height: rem(72px);
+    font-weight: 100;
     text-transform: uppercase;
-    margin-bottom:rem(20px);
+    margin: 0 0 rem(24px);
+    text-align: center;
 
     @include media-breakpoint-down(sm) {
       font-size: rem(40px);
+      line-height: rem(48px);
     }
   }
 
-  p{
-    text-align: left;
-    font-size: rem(14px);
-    font-weight: 300;
-    margin-bottom: rem(43px);
-  }
-  .title{
-    font-size: rem(18px);
-    font-weight: 700;
-    line-height: rem(24px);
-    margin-bottom: rem(6px);
-  }
-  .info{
-    font-size: rem(24px);
-    line-height: rem(36px);
-    margin-bottom: rem(40px);
+  .img-wrap {
+    text-align: center;
+    margin: 0 0 rem(40px);
   }
 
+  .info-wrap {
+    width: 80%;
+    margin: 0 auto rem(80px);
+
+    @include media-breakpoint-down(md) {
+      width: 90%;
+    }
+
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      margin: 0 0 rem(40px);
+    }
+
+    .title {
+      font-size: rem(18px);
+      line-height: rem(24px);
+      font-weight: 700;
+      margin: 0 0 rem(6px);
+      letter-spacing: 1px;
+    }
+  }
+
+  .txt-note {
+    font-size: rem(14px);
+    line-height: rem(21px);
+    font-weight: 300;
+    margin: 0 0 rem(40px);
+    letter-spacing: 1px;
+  }
+
+  .lead {
+    font-size: rem(24px);
+    line-height: rem(36px);
+    font-weight: 300;
+    letter-spacing: 1.4px;
+    margin: 0;
+  }
 }
