Added: Footer Links

--- a/src/views/inc/footer.jade
+++ b/src/views/inc/footer.jade
@@ -5,21 +5,21 @@ footer.josh-footer
       a(href="mailto:info@joshsoftware.com") info@joshsoftware.com
     .footer-nav-wrap
       nav.nav.footer-nav
-        a.nav-link(href="javascript:void(0);") Home
-        a.nav-link(href="javascript:void(0);") Services
-        a.nav-link(href="javascript:void(0);") Our Work
-        a.nav-link(href="javascript:void(0);") Innovation
-        a.nav-link(href="javascript:void(0);") Technologies
-        a.nav-link(href="javascript:void(0);") Industries
+        a.nav-link(href="/") Home
+        a.nav-link(href="services.html") Services
+        a.nav-link(href="services.html#ourWork") Our Work
+        a.nav-link(href="innovation.html") Innovation
+        a.nav-link(href="technologies.html") Technologies
+        a.nav-link(href="industries.html") Industries
         a.nav-link(href="javascript:void(0);") Testimonials
       nav.nav.footer-nav
-        a.nav-link(href="javascript:void(0);") Company
-        a.nav-link(href="javascript:void(0);") Open Source
-        a.nav-link(href="javascript:void(0);") In News
-        a.nav-link(href="javascript:void(0);") Our Team
-        a.nav-link(href="javascript:void(0);") Blog
-        a.nav-link(href="javascript:void(0);") Career
-        a.nav-link(href="javascript:void(0);") Contact Us
+        a.nav-link(href="about-us.html") Company
+        a.nav-link(href="open-source.html") Open Source
+        a.nav-link(href="about-us.html#news") In News
+        a.nav-link(href="team.html") Our Team
+        a.nav-link(href="https://blog.joshsoftware.com/", target="_blank") Blog
+        a.nav-link(href="career.html") Career
+        a.nav-link(href="contact-us.html") Contact Us
     .social-links-wrap
       .policy-wrap
         p.text-policy
