--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -6,7 +6,7 @@ block content
         h2.text-white.abc INNOVATION <br>DISRUPTION
         p.text-white IS THE WAY WE CHANGE
         h4.text-white THE GAME
-        a.btn.btn-outline-danger.text-white Contact us
+        a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
         p
           small.text-white to change yours
 
@@ -16,7 +16,7 @@ block content
       .text-center
         img.img-fluid.img-expertise(src="./images/expertise.svg", alt="")
       .link-box.mb-4
-        a.text-white(href="javascript:void(0);")
+        a.text-white(href="industries.html")
           i.align-middle.icon-arrow-right
           | View All Domains
 
@@ -26,7 +26,7 @@ block content
       img.img-fluid.img-horizontal(src="./images/our-work.svg", alt="")
       img.img-fluid.img-vertical(src="./images/our-work-sm.svg", alt="")
       .link-box.mb-4
-        a.text-white(href="javascript:void(0);")
+        a.text-white(href="services.html#ourWork")
           i.align-middle.icon-arrow-right
           | View Our Work
   section.section-home.section-clients
@@ -99,7 +99,7 @@ block content
             h4 96
             p Clients
           .stats.stats-button.d-none.d-lg-block
-            a.btn.btn-outline-white(href="javascript:void(0);") Company
+            a.btn.btn-outline-white(href="about-us.html") Company
         .about-banner
           img.img-fluid(src="./images/about.png", alt="")
         .stats-box
@@ -113,7 +113,7 @@ block content
             h4 60%
             p Clients that are working with us <br>for more than 5 years
           .stats.stats-button.d-none.d-lg-block
-            a.btn.btn-outline-white(href="javascript:void(0);") Our Team
+            a.btn.btn-outline-white(href="team.html") Our Team
 
   section.section-home.section-contact
     .container
@@ -122,7 +122,7 @@ block content
           .contact-wrap
             p Looking for an <br>expert technical partner?
             .d-none.d-lg-block
-              a.btn.btn-gray(href="javascript:void(0);") Contact Us
+              a.btn.btn-gray(href="contact-us.html") Contact Us
     .contact-banner
     .contact-number
       .container
@@ -165,21 +165,21 @@ block footer
 
       .footer-nav-wrap
         nav.nav.footer-nav
-          a.nav-link(href="javascript:void(0);") Home
-          a.nav-link(href="javascript:void(0);") Services
-          a.nav-link(href="javascript:void(0);") Our Work
-          a.nav-link(href="javascript:void(0);") Innovation
-          a.nav-link(href="javascript:void(0);") Technologies
-          a.nav-link(href="javascript:void(0);") Industries
+          a.nav-link(href="/") Home
+          a.nav-link(href="services.html") Services
+          a.nav-link(href="services.html#ourWork") Our Work
+          a.nav-link(href="innovation.html") Innovation
+          a.nav-link(href="technologies.html") Technologies
+          a.nav-link(href="industries.html") Industries
           a.nav-link(href="javascript:void(0);") Testimonials
         nav.nav.footer-nav
-          a.nav-link(href="javascript:void(0);") Company
-          a.nav-link(href="javascript:void(0);") Open Source
-          a.nav-link(href="javascript:void(0);") In News
-          a.nav-link(href="javascript:void(0);") Our Team
-          a.nav-link(href="javascript:void(0);") Blog
-          a.nav-link(href="javascript:void(0);") Career
-          a.nav-link(href="javascript:void(0);") Contact Us
+          a.nav-link(href="about-us.html") Company
+          a.nav-link(href="open-source.html") Open Source
+          a.nav-link(href="about-us.html#news") In News
+          a.nav-link(href="team.html") Our Team
+          a.nav-link(href="https://blog.joshsoftware.com/", target="_blank") Blog
+          a.nav-link(href="career.html") Career
+          a.nav-link(href="contact-us.html") Contact Us
       p.text-policy.text-center.mb-3
         a(href="javascript:void(0);") View Privacy Policy
       p.text-copyright.text-center.mb-3 Copyright © 2007 - 2018 Josh Software Pvt. Ltd.
