--- a/src/styles/pages/_about-us.scss
+++ b/src/styles/pages/_about-us.scss
@@ -17,82 +17,88 @@
   @include media-breakpoint-down(sm) {
     padding: rem(40px 0 30px);
   }
-}
 
-.about-wrap {
-  @include flexbox();
-  @include flex-direction(column);
-  @include flex(1);
-  @include justify-content(center);
-
-  @include media-breakpoint-down(md) {
-    margin: 0 0 rem(40px);
-  }
-
-  .wrap-title {
-    font-size: rem(32px);
-    line-height: rem(40px);
-    font-weight: 100;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-align: center;
-    color: $white;
-    margin: 0 0 rem(32px);
-
-    @include media-breakpoint-down(md) {
-      margin: 0 0 rem(24px);
-    }
-  }
-
-  .wrap-subtitle {
-    font-size: rem(28px);
-    line-height: rem(34px);
-    font-weight: 100;
-    letter-spacing: 2px;
-    text-align: center;
-    color: $white;
-    margin: 0 0 rem(64px);
+  .about-wrap {
+    @include flexbox();
+    @include flex-direction(column);
+    @include flex(1);
+    @include justify-content(center);
 
     @include media-breakpoint-down(md) {
       margin: 0 0 rem(40px);
     }
-  }
 
-  .para {
-    font-size: rem(18px);
-    line-height: rem(28px);
-    font-weight: 100;
-    letter-spacing: 1px;
-    color: $white;
-    margin: 0 0 rem(80px);
+    .wrap-title {
+      font-size: rem(32px);
+      line-height: rem(40px);
+      font-weight: 100;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-align: center;
+      color: $white;
+      margin: 0 0 rem(32px);
 
-    @include media-breakpoint-down(md) {
-      margin: 0 0 rem(40px);
+      @include media-breakpoint-down(md) {
+        margin: 0 0 rem(24px);
+      }
     }
-  }
 
-  .btn-wrap {
-    text-align: center;
+    .wrap-subtitle {
+      font-size: rem(28px);
+      line-height: rem(34px);
+      font-weight: 100;
+      letter-spacing: 2px;
+      text-align: center;
+      color: $white;
+      margin: 0 0 rem(64px);
 
-    .btn{
-      margin: 0 rem(20px) 0 0;
-    
+      @include media-breakpoint-down(md) {
+        margin: 0 0 rem(40px);
+      }
+    }
+
+    .para {
+      font-size: rem(18px);
+      line-height: rem(28px);
+      font-weight: 100;
+      letter-spacing: 1px;
+      color: $white;
+      margin: 0 0 rem(80px);
+
+      @include media-breakpoint-down(md) {
+        margin: 0 0 rem(40px);
+      }
+    }
+
+    .btn-wrap {
+      @include flexbox();
+      @include justify-content(center);
+
       @include media-breakpoint-down(sm){
-        margin: 0 0 rem(20px);
+        @include flex-direction(column);
+        @include align-items(center);
       }
 
-      &:hover {
-        color: $roman;
-      }
+      .btn{
+        margin: 0 rem(20px) 0 0;
+      
+        @include media-breakpoint-down(sm){
+          margin: 0 0 rem(20px);
+        }
 
-      &:last-child {
-        margin: 0;
+        &:hover {
+          color: $roman;
+        }
+
+        &:last-child {
+          margin: 0;
+        }
       }
     }
-  }
 
-  .btn-white {
-    color: $roman;
+    .btn-white {
+      color: $roman;
+    }
   }
 }
 
